methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:17: error: type mismatch;
 found   : Unit
 required: Boolean
  return
  ^