methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit = false
  while (vuBiscuit == false){
    for (i <- 1 to 7){
      if (estSurBiscuit()){
        vuBiscuit = true
      }
      avance()
    }
    if (vuBiscuit == true){
      return true
    }
    droite()
    avance()
    gauche()
  }
  return
}